# ccopenlib

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  LICENSE.md  README.md  appveyor.yml  documentation.cmake
docs/: Doxyfile.in  doxygenccopenlib.css  header.html
include/: threadpool.h  timer.h
include/ccol/: version.hxx.in
include/ccol/event/: EXAMPLES.md  baseevent.hxx  callbackevent.hxx  callbackeventqueue.hxx  dataevent.hxx  eventqueue.hxx
include/ccol/thread/: EXAMPLES.md  thread_wrap.hxx  thread_wrapper.hxx  threadpool.h  threadpool.hxx  timer.h  timer.hxx  timercollection.hxx
include/ccol/util/: EXAMPLES.md  always_false.hxx  cancellationtoken.hxx  cancellationtokensource.hxx
include/ccol/version/: EXAMPLES.md  version.hxx.in
src/: threadpool.cpp  timer.cpp
src/ccol/event/: baseevent.cxx  callbackevent.cxx  callbackeventqueue.cxx  eventqueue.cxx
src/ccol/thread/: thread_wrap.cxx  thread_wrapper.cxx  threadpool.cpp  threadpool.cxx  timer.cpp  timer.cxx  timercollection.cxx
src/ccol/util/: cancellationtoken.cxx  cancellationtokensource.cxx
tests/: CMakeLists.txt
tests/src/: sample1_unittest.cc
tests/src/ccol/event/: callbackeventqueue_unittest.cxx  eventqueue_unittest.cxx
tests/src/ccol/thread/: thread_wrap_unittest.cxx  threadpool_unittest.cxx  timer_unittest.cxx
tests/src/ccol/util/: cancellationtokensource_unittest.cxx
